Production/force-app/main/default/objects/Daily_Sales_Data__c/Daily_Sales_Data__c.object-meta.xml
<CustomObject>
    <label>Vaxchora Sales Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaxchora Sales Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>