Production/force-app/main/default/objects/Daily_Sales_Data__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <label>Invoice Line</label>
    <length>3</length>
    <type>Text</type>
</CustomField>