Production/force-app/main/default/objects/Daily_Sales_Data__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>