Production/force-app/main/default/objects/Daily_Sales_Data__c/fields/ShipTo_ID__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_ID__c</fullName>
    <label>ShipTo ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>