Production/force-app/main/default/objects/Daily_Sales_Data__c/fields/ShipTo_Type__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Type__c</fullName>
    <label>ShipTo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>